[gd_scene load_steps=17 format=3 uid="uid://cy8yxobay3dcf"]

[ext_resource type="Script" uid="uid://duka3raic6aqi" path="res://UI/game_ui.gd" id="1_wtiqs"]
[ext_resource type="Texture2D" uid="uid://cs2r8sf0sho7k" path="res://Sprites/UI/bars/UI/Cyrcle_frame.png" id="2_3eumv"]
[ext_resource type="Texture2D" uid="uid://b4b0t7mavsko" path="res://Sprites/UI/bars/UI/Cyrcle_proced.png" id="3_4kgck"]
[ext_resource type="Texture2D" uid="uid://cupjbn6mvtim6" path="res://Sprites/UI/in Game/Rader.png" id="4_3aifi"]
[ext_resource type="Texture2D" uid="uid://mgiqy8g1uvqr" path="res://Sprites/UI/in Game/Rader_curser1.png" id="5_dkflf"]
[ext_resource type="Script" uid="uid://coa0alkfyrpl3" path="res://UI/rader.gd" id="5_fm8ch"]

[sub_resource type="SystemFont" id="SystemFont_4dhts"]
font_names = PackedStringArray("November")
subpixel_positioning = 0

[sub_resource type="LabelSettings" id="LabelSettings_bhj6w"]
font = SubResource("SystemFont_4dhts")
font_size = 48
font_color = Color(0, 0, 0, 1)
outline_size = 16
outline_color = Color(0.690196, 1, 0, 1)

[sub_resource type="Animation" id="Animation_jf4q8"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:label_settings:font_size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [48]
}

[sub_resource type="Animation" id="Animation_butib"]
resource_name = "wave effect"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:label_settings:font_size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [48, 96, 48]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ldl3m"]
_data = {
&"RESET": SubResource("Animation_jf4q8"),
&"wave effect": SubResource("Animation_butib")
}

[sub_resource type="LabelSettings" id="LabelSettings_fy64h"]
font = SubResource("SystemFont_4dhts")
font_size = 24
font_color = Color(0, 0, 0, 1)
outline_size = 16
outline_color = Color(0.690196, 1, 0, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_k2fda"]
atlas = ExtResource("4_3aifi")
region = Rect2(0, 0, 78, 78)

[sub_resource type="Animation" id="Animation_hnooe"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("curser:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("curser:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_6r258"]
resource_name = "rotate"
length = 6.0
loop_mode = 1
step = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("curser:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 6.28319]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("curser:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5, 2.5, 3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_dchpr"]
_data = {
&"RESET": SubResource("Animation_hnooe"),
&"rotate": SubResource("Animation_6r258")
}

[node name="GameUI" type="CanvasLayer"]
process_mode = 3
layer = 100
script = ExtResource("1_wtiqs")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 48
theme_override_constants/margin_top = 48
theme_override_constants/margin_right = 48
theme_override_constants/margin_bottom = 48

[node name="VBoxContainer" type="VBoxContainer" parent="Control/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
theme_override_constants/separation = 50

[node name="Label" type="Label" parent="Control/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
text = "1"
label_settings = SubResource("LabelSettings_bhj6w")
horizontal_alignment = 1
vertical_alignment = 1

[node name="label_anim" type="AnimationPlayer" parent="Control/MarginContainer/VBoxContainer/Label"]
unique_name_in_owner = true
libraries = {
&"": SubResource("AnimationLibrary_ldl3m")
}

[node name="wave_progress" type="TextureProgressBar" parent="Control/MarginContainer/VBoxContainer/Label"]
unique_name_in_owner = true
modulate = Color(0.690196, 1, 0, 1)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -0.5
offset_top = -0.5
offset_right = 0.5
offset_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
step = 0.01
value = 26.42
fill_mode = 4
texture_under = ExtResource("2_3eumv")
texture_progress = ExtResource("3_4kgck")

[node name="fps_label" type="Label" parent="Control/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
text = "1"
label_settings = SubResource("LabelSettings_fy64h")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Rader" type="TextureRect" parent="Control/MarginContainer"]
custom_minimum_size = Vector2(200, 200)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
texture = SubResource("AtlasTexture_k2fda")
script = ExtResource("5_fm8ch")

[node name="curser" type="TextureRect" parent="Control/MarginContainer/Rader"]
z_index = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(100, 100)
texture = ExtResource("5_dkflf")

[node name="anim" type="AnimationPlayer" parent="Control/MarginContainer/Rader"]
libraries = {
&"": SubResource("AnimationLibrary_dchpr")
}
autoplay = "rotate"
